--- a/index.html
+++ b/index.html
@@ -3,12 +3,33 @@
     <head>
         <meta charset='utf-8'>
         <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-        <title>Page Title</title>
+        <title>Piano School</title>
         <meta name='viewport' content='width=device-width, initial-scale=1'>
         <link rel='stylesheet' href='style.css'>
-        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
     </head>
     <body>
-        
+        <header>
+            <div class="logo-container">
+                <img src="img/piano-school-logo.png" alt="logo"/>
+                <h4>Piano School</h4>
+            </div>
+            <nav>
+                <div class="nav-links">
+                    <li>
+                        <a class="nav-link" href="#">About</a>
+                    </li>
+                    <li>
+                        <a class="nav-link" href="#">Services</a>
+                    </li>
+                    <li>
+                        <a class="nav-link" href="#">Contact</a>
+                    </li>
+                    <li>
+                        <a class="nav-link book" href="#">Book Now!</a>
+                    </li>
+                </div>
+            </nav>
+        </header>
     </body>
 </html>
