Completed home and about page

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <nav>
                 <div class="nav-links">
                     <li>
-                        <a class="nav-link" href="#">About</a>
+                        <a class="nav-link" href="#about">About</a>
                     </li>
                     <li>
                         <a class="nav-link" href="#">Services</a>
@@ -31,5 +31,25 @@
                 </div>
             </nav>
         </header>
+
+        <main>
+            <section id="home-page">
+                <div class="introduction">
+                    <div class="intro-text">
+                        <h1>Learn Piano Easily</h1>
+                        <h2>Book a lesson with one of our teachers now!</h2>
+                        <a class="home-book-btn" href="#">Book Now!</a>
+                    </div>
+                </div>
+            </section>
+            <section id="about">
+                <div class="about-container">
+                    <h1>Welcome to Piano School!</h1>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatem illum rerum, possimus iusto accusamus dolorem reiciendis natus expedita magni velit tempore quaerat placeat autem similique odio deleniti optio quidem tempora! Error nostrum, repellendus, porro id atque enim facere maiores quam velit eius reprehenderit culpa fuga assumenda quas autem iste, quasi perferendis? Libero, dolores aliquid similique nostrum tempore voluptate dolor expedita tenetur vero ipsa, sapiente debitis quod modi voluptates facere quisquam nisi ullam numquam incidunt distinctio neque impedit reprehenderit. Veniam exercitationem enim necessitatibus et reiciendis mollitia natus accusantium recusandae commodi amet!</p>
+                    <button class="learn-more-btn">Learn More</button>
+                </div>
+                <img class="piano-teacher-img" src="img/piano-teacher.jpg" alt="Piano Teacher teaching a child">
+            </section>
+        </main>
     </body>
 </html>
