Completed Services page

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                         <a class="nav-link" href="#about">About</a>
                     </li>
                     <li>
-                        <a class="nav-link" href="#">Services</a>
+                        <a class="nav-link" href="#services">Services</a>
                     </li>
                     <li>
                         <a class="nav-link" href="#">Contact</a>
@@ -50,6 +50,27 @@
                 </div>
                 <img class="piano-teacher-img" src="img/piano-teacher.jpg" alt="Piano Teacher teaching a child">
             </section>
+            <section id="services">
+                <h1>Music Classes</h1>
+                <div class="services-container">
+                    <div class="service">
+                        <h2>Piano for Beginners</h2>
+                        <img src="img/piano-beginner.jpg" alt="Young child playing the piano">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, ducimus. Repellendus aliquam dolorem tempore quia, fuga placeat vel pariatur facere itaque animi. Ipsum quae sed quam, perferendis at assumenda suscipit ad numquam consectetur vero distinctio iusto totam velit maiores sunt quidem ipsam saepe autem asperiores eum quisquam, reiciendis quos! Necessitatibus sequi, aliquid veniam eveniet tenetur aperiam! Deserunt iusto eveniet error.</p>
+                    </div>
+                    <div class="service">
+                        <h2>Classical Piano</h2>
+                        <img src="img/piano-classical.jpg" alt="Piano Picture">
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Unde voluptatibus illum velit, accusantium quaerat, magnam ab repellat reprehenderit nemo incidunt culpa omnis repellendus dolore deleniti quod tempore quae qui voluptate voluptas quis rem. Eaque aliquid nostrum, vel neque iste aperiam quod ex ducimus consectetur quis aut optio in doloremque ullam eos sed sit iure et sequi voluptatibus, porro doloribus maiores.</p>
+                    </div>
+                    <div class="service">
+                        <h2>Jazz Piano</h2>
+                        <img src="img/piano-jazz.jpg" alt="Jazz Trio">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque, ullam officia optio odit voluptates corrupti magni voluptate! Eveniet eum velit ab cupiditate eligendi adipisci ducimus dolore tempore, explicabo blanditiis animi corrupti, debitis doloribus nihil ipsum accusamus, nobis saepe beatae sit aperiam? Saepe sed reiciendis excepturi labore illum impedit repudiandae veniam nemo porro. Nostrum voluptate veniam corrupti officia, sapiente laboriosam vero.</p>
+                    </div>
+                </div>
+            </section>
+
         </main>
     </body>
 </html>
