Completed contact us page

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>Piano School</title>
         <meta name='viewport' content='width=device-width, initial-scale=1'>
         <link rel='stylesheet' href='style.css'>
-        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
     </head>
     <body>
         <header>
@@ -69,6 +69,42 @@
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque, ullam officia optio odit voluptates corrupti magni voluptate! Eveniet eum velit ab cupiditate eligendi adipisci ducimus dolore tempore, explicabo blanditiis animi corrupti, debitis doloribus nihil ipsum accusamus, nobis saepe beatae sit aperiam? Saepe sed reiciendis excepturi labore illum impedit repudiandae veniam nemo porro. Nostrum voluptate veniam corrupti officia, sapiente laboriosam vero.</p>
                     </div>
                 </div>
+            </section>
+            <section id="contact">
+                <div class="contact-container">
+                    <div class="contactForm">
+                        <h2>Send Us a Message</h2>
+                        <div class="formBox">
+                            <div class="inputBox text">
+                                <input type="text" name="" required>
+                                <span>First Name</span>
+                            </div>
+                            <div class="inputBox text">
+                                <input type="text" name="" required>
+                                <span>Last Name</span>
+                            </div>
+                            <div class="inputBox text">
+                                <input type="text" name="" required>
+                                <span>Email Address</span>
+                            </div>
+                            <div class="inputBox text">
+                                <input type="text" name="" required>
+                                <span>Mobile Number</span>
+                            </div>
+                            <div class="message-area">
+                                <div class="inputBox textarea">
+                                    <textarea name="" required></textarea>
+                                    <span>Write your message here...</span>
+                                </div>
+                                <div class="send-btn">
+                                    <input type="submit" value="Send">
+                                </div>
+                            </div>
+                            
+                        </div>
+                    </div>
+                </div>
+                
             </section>
 
         </main>
