--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                         <a class="nav-link" href="#services">Services</a>
                     </li>
                     <li>
-                        <a class="nav-link" href="#">Contact</a>
+                        <a class="nav-link" href="#contact">Contact</a>
                     </li>
                     <li>
                         <a class="nav-link book" href="#">Book Now!</a>
