Renamed business to 'Melody Music' changd up some styling

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset='utf-8'>
         <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-        <title>Piano School</title>
+        <title>Melody Music</title>
         <meta name='viewport' content='width=device-width, initial-scale=1'>
         <link rel='stylesheet' href='style.css'>
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
@@ -12,7 +12,7 @@
         <header>
             <div class="logo-container">
                 <img src="img/piano-school-logo.png" alt="logo"/>
-                <h4>Piano School</h4>
+                <h4>Melody Music</h4>
             </div>
             <nav>
                 <div class="nav-links">
@@ -44,7 +44,7 @@
             </section>
             <section id="about">
                 <div class="about-container">
-                    <h1>Welcome to Piano School!</h1>
+                    <h1>Welcome to Melody Music!</h1>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatem illum rerum, possimus iusto accusamus dolorem reiciendis natus expedita magni velit tempore quaerat placeat autem similique odio deleniti optio quidem tempora! Error nostrum, repellendus, porro id atque enim facere maiores quam velit eius reprehenderit culpa fuga assumenda quas autem iste, quasi perferendis? Libero, dolores aliquid similique nostrum tempore voluptate dolor expedita tenetur vero ipsa, sapiente debitis quod modi voluptates facere quisquam nisi ullam numquam incidunt distinctio neque impedit reprehenderit. Veniam exercitationem enim necessitatibus et reiciendis mollitia natus accusantium recusandae commodi amet!</p>
                     <button class="learn-more-btn">Learn More</button>
                 </div>
